--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,43 +15,21 @@
     <meta name="msapplication-TileColor" content="#2d89ef" />
     <meta name="theme-color" content="#ffffff" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:400"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet" />
+    <link rel="stylesheet" href="pickr.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <div class="container">
+    <div style="font-size: 16px;" class="container">
       <div class="color-picker"></div>
       <form class="form" id="form">
         <input type="hidden" id="color" value="" />
         <label class="form__label" for="">Resulotion</label>
         <div class="form__inline">
-          <input
-            class="form__input"
-            type="number"
-            placeholder="Width"
-            max="9000"
-            min="1"
-            required
-            id="width"
-          />
+          <input class="form__input" type="number" placeholder="Width" max="9000" min="1" required id="width" />
           <span>x</span>
-          <input
-            class="form__input"
-            type="number"
-            id="height"
-            required
-            max="9000"
-            min="1"
-            placeholder="Height"
-          />
+          <input class="form__input" type="number" id="height" required max="9000" min="1" placeholder="Height" />
         </div>
         <div class="u-center-content">
           <button class="button" type="submit">Download</button>
@@ -62,4 +41,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.es5.min.js"></script>
   <script src="app.js"></script>
+
 </html>
